@startuml
'https://plantuml.com/sequence-diagram


interface Movable {
    + int[] coordonnees
    + getCoordonnees(): int[]
}

class Aliment implements Movable {
    + String nom
    + String description
}

class Assiette extends Aliment {
    + getAliment(): Aliment
    + setAliment(Aliment): void
}

Aliment <-- Assiette : aliment

class Plat extends Aliment {
    + List<Aliment> recettesComposees
    + getIngredients(): Aliment[]
    + setIngredients(Aliment[]): void
}

Aliment "0..*" <-up- "1" Plat : recettesComposees

abstract class DecorateurEtat extends Aliment {
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}

Aliment <-- DecorateurEtat : composant

class Coupe extends DecorateurEtat {
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}

@enduml